ios-push-service/service-only.yaml
apiVersion: v1
kind: Service
metadata:
  name: ios-push-service
spec:
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ios-push-service
subsets:
- addresses:
  - ip: 10.20.182.243
  ports:
  - port: 8083
