ios-push-service/ingress-push-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ios-push-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
spec:
  rules:
  - host: ip10-20-182-243-node1-80.bulutbilisimciler.com
    http:
      paths:
      - path: /api/push
        pathType: Prefix
        backend:
          service:
            name: ios-push-service
            port:
              number: 8083
